# annotation-api

./: .gitignore  Dockerfile  alembic.ini  configMap.yaml  deployment.yaml  docker-compose.yaml  initialize.py  main.py  pyproject.toml  settings.py
.github/workflows/: main.yml
app/: context.py  es_service.py  kafka_service.py  midlle.py  routes.py  utils.py  validators.py
app/annotations/: routes.py  schema.py
app/chat/: routes.py  schema.py  utils.py
app/func_db/: __init__.py  annotations.py  func_db.py  users.py  utils.py
app/mapping/: chat_message.py
app/users/: routes.py  schema.py
models/: __init__.py  annotation.py  user.py
