[tool.poetry]
name = "poetry"
version = "0.1.1"
description = ""
authors = ["Matheus Bezerra <matheus.bezerra@apura.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
uuid = "^1.30"
orjson = "^3.9.10"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"
shortuuid = "^1.0.11"
websockets = "^12.0"
#aiokafka = "^0.10.0"
#elasticsearch = "^8.12.0"
black = "^24.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
